--- a/conputer_graph_stats.ipynb
+++ b/conputer_graph_stats.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,13 +22,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "clustering_coefficients = []\n",
     "for adj_matrix in reddit:\n",
     "    G = nx.from_numpy_matrix(adj_matrix.numpy())\n",
+    "    # undirected graph\n",
+    "    G = G.to_undirected()\n",
     "    clustering_coeffs = nx.clustering(G)\n",
     "    avg_clustering_coeff = np.mean(list(clustering_coeffs.values()))\n",
     "    clustering_coefficients.append(avg_clustering_coeff)"
@@ -36,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -45,13 +47,13 @@
        "0.0"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "sum(clustering_coefficients)"
+    "np.mean(clustering_coefficients)"
    ]
   },
   {
@@ -154,7 +156,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.1.undefined"
   }
  },
  "nbformat": 4,
