--- a/test.ipynb
+++ b/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -52,27 +52,69 @@
     }
    ],
    "source": [
-    "reddit = torch.load('gad_datasets/reddit_v2/reddit_onehot.pt')\n",
+    "reddit = torch.load('gad_datasets/reddit_continuous/reddit_continuous.pt')\n",
     "print(len(reddit))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "torch.Size([250, 250])\n",
-      "torch.Size([250, 2])\n"
-     ]
+     "data": {
+      "text/plain": [
+       "tensor([[0.0114, 0.0165, 0.0133,  ..., 0.0156, 0.0178, 0.0000],\n",
+       "        [0.0209, 0.0172, 0.0190,  ..., 0.0156, 0.0174, 0.0000],\n",
+       "        [0.0159, 0.0155, 0.0153,  ..., 0.0156, 0.0167, 0.0000],\n",
+       "        ...,\n",
+       "        [0.0176, 0.0173, 0.0175,  ..., 0.0154, 0.0175, 0.0000],\n",
+       "        [0.0122, 0.0143, 0.0132,  ..., 0.0154, 0.0173, 0.0000],\n",
+       "        [0.0151, 0.0160, 0.0169,  ..., 0.0156, 0.0174, 0.0000]])"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(reddit[0][0].shape)\n",
-    "print(reddit[0][1].shape)\n"
+    "reddit[0][2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "reddit_modified = [(t[0], t[1], t[2][..., :-1]) for t in reddit]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[0.0114, 0.0165, 0.0133,  ..., 0.0156, 0.0156, 0.0178],\n",
+       "        [0.0209, 0.0172, 0.0190,  ..., 0.0156, 0.0156, 0.0174],\n",
+       "        [0.0159, 0.0155, 0.0153,  ..., 0.0156, 0.0156, 0.0167],\n",
+       "        ...,\n",
+       "        [0.0176, 0.0173, 0.0175,  ..., 0.0154, 0.0154, 0.0175],\n",
+       "        [0.0122, 0.0143, 0.0132,  ..., 0.0154, 0.0154, 0.0173],\n",
+       "        [0.0151, 0.0160, 0.0169,  ..., 0.0156, 0.0156, 0.0174]])"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.save(reddit_modified, 'gad_datasets/reddit_continuous/reddit_continuous.pt')"
    ]
   }
  ],
