--- a/test.ipynb
+++ b/test.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -58,28 +58,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[0.0114, 0.0165, 0.0133,  ..., 0.0156, 0.0178, 0.0000],\n",
-       "        [0.0209, 0.0172, 0.0190,  ..., 0.0156, 0.0174, 0.0000],\n",
-       "        [0.0159, 0.0155, 0.0153,  ..., 0.0156, 0.0167, 0.0000],\n",
+       "tensor([[1., 0., 0.,  ..., 0., 0., 0.],\n",
+       "        [0., 1., 0.,  ..., 0., 1., 0.],\n",
+       "        [0., 0., 1.,  ..., 0., 0., 0.],\n",
        "        ...,\n",
-       "        [0.0176, 0.0173, 0.0175,  ..., 0.0154, 0.0175, 0.0000],\n",
-       "        [0.0122, 0.0143, 0.0132,  ..., 0.0154, 0.0173, 0.0000],\n",
-       "        [0.0151, 0.0160, 0.0169,  ..., 0.0156, 0.0174, 0.0000]])"
+       "        [0., 0., 0.,  ..., 1., 0., 0.],\n",
+       "        [0., 1., 0.,  ..., 0., 1., 0.],\n",
+       "        [0., 0., 0.,  ..., 0., 0., 1.]])"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "reddit[0][2]"
+    "reddit[0][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "reddit_first_tensors = [t[0] for t in reddit]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[1., 0., 0.,  ..., 0., 0., 0.],\n",
+       "        [0., 1., 0.,  ..., 0., 1., 0.],\n",
+       "        [0., 0., 1.,  ..., 0., 0., 0.],\n",
+       "        ...,\n",
+       "        [0., 0., 0.,  ..., 1., 0., 0.],\n",
+       "        [0., 1., 0.,  ..., 0., 1., 0.],\n",
+       "        [0., 0., 0.,  ..., 0., 0., 1.]])"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "reddit_first_tensors[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "torch.save(reddit_first_tensors, 'gad_datasets/reddit/reddit.pt')"
    ]
   },
   {
@@ -93,26 +137,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([[0.0114, 0.0165, 0.0133,  ..., 0.0156, 0.0156, 0.0178],\n",
-       "        [0.0209, 0.0172, 0.0190,  ..., 0.0156, 0.0156, 0.0174],\n",
-       "        [0.0159, 0.0155, 0.0153,  ..., 0.0156, 0.0156, 0.0167],\n",
-       "        ...,\n",
-       "        [0.0176, 0.0173, 0.0175,  ..., 0.0154, 0.0154, 0.0175],\n",
-       "        [0.0122, 0.0143, 0.0132,  ..., 0.0154, 0.0154, 0.0173],\n",
-       "        [0.0151, 0.0160, 0.0169,  ..., 0.0156, 0.0156, 0.0174]])"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "torch.save(reddit_modified, 'gad_datasets/reddit_continuous/reddit_continuous.pt')"
    ]
