--- a/conputer_graph_stats.ipynb
+++ b/conputer_graph_stats.ipynb
@@ -134,10 +134,101 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import torch"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "aug_datat = torch.load('outputs/aug_reddit_onehot/augment_samples.pt')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Data(x=[150, 2], edge_index=[2, 1720])"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "aug_datat[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[0, 1, 2, 2],\n",
+      "        [2, 2, 0, 1]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "import numpy as np\n",
+    "\n",
+    "def adj_to_edge_index(adj):\n",
+    "    \"\"\"\n",
+    "    Convert adjacency matrix to edge_index format for PyTorch Geometric.\n",
+    "    \n",
+    "    Parameters:\n",
+    "    adj (numpy.ndarray or torch.Tensor): Adjacency matrix of shape (n, n)\n",
+    "\n",
+    "    Returns:\n",
+    "    torch.Tensor: edge_index tensor of shape (2, num_edges)\n",
+    "    \"\"\"\n",
+    "    if isinstance(adj, np.ndarray):\n",
+    "        adj = torch.tensor(adj)\n",
+    "    \n",
+    "    assert adj.shape[0] == adj.shape[1], \"Adjacency matrix should be square\"\n",
+    "    \n",
+    "    # Get the indices of the upper triangular part of the matrix, excluding the diagonal\n",
+    "    row, col = torch.triu_indices(adj.shape[0], adj.shape[1], offset=1)\n",
+    "    \n",
+    "    # Create edge_index\n",
+    "    edge_index = torch.stack([row, col], dim=0)\n",
+    "    \n",
+    "    # Filter edges based on adjacency matrix (considering it as undirected)\n",
+    "    mask = adj[row, col].bool()\n",
+    "    edge_index = edge_index[:, mask]\n",
+    "    \n",
+    "    # Create the reverse edges to make the graph undirected\n",
+    "    edge_index_reverse = torch.stack([edge_index[1], edge_index[0]], dim=0)\n",
+    "    \n",
+    "    # Combine original and reverse edges\n",
+    "    edge_index = torch.cat([edge_index, edge_index_reverse], dim=1)\n",
+    "    \n",
+    "    return edge_index\n",
+    "\n",
+    "# Example usage\n",
+    "adj = np.array([[0, 0, 1],\n",
+    "                [0, 0, 1],\n",
+    "                [0, 0, 0]])\n",
+    "\n",
+    "edge_index = adj_to_edge_index(adj)\n",
+    "print(edge_index)\n"
+   ]
   }
  ],
  "metadata": {
@@ -156,7 +247,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.1.undefined"
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
