--- a/test.ipynb
+++ b/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -49,37 +49,63 @@
      "text": [
       "219\n"
      ]
-    }
-   ],
-   "source": [
-    "reddit = torch.load('gad_datasets/reddit_continuous/reddit_continuous.pt')\n",
-    "print(len(reddit))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [
+    },
     {
      "data": {
       "text/plain": [
        "tensor([[1., 0., 0.,  ..., 0., 0., 0.],\n",
-       "        [0., 1., 0.,  ..., 0., 1., 0.],\n",
+       "        [0., 1., 0.,  ..., 0., 0., 0.],\n",
        "        [0., 0., 1.,  ..., 0., 0., 0.],\n",
        "        ...,\n",
        "        [0., 0., 0.,  ..., 1., 0., 0.],\n",
-       "        [0., 1., 0.,  ..., 0., 1., 0.],\n",
+       "        [0., 0., 0.,  ..., 0., 1., 0.],\n",
        "        [0., 0., 0.,  ..., 0., 0., 1.]])"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "reddit[0][0]"
+    "reddit = torch.load('gad_datasets/reddit/reddit.pt')\n",
+    "print(len(reddit))\n",
+    "reddit[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1500\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[0., 0., 0.,  ..., 0., 0., 0.],\n",
+       "        [0., 0., 0.,  ..., 0., 1., 0.],\n",
+       "        [0., 0., 0.,  ..., 0., 1., 0.],\n",
+       "        ...,\n",
+       "        [0., 0., 0.,  ..., 0., 1., 0.],\n",
+       "        [0., 1., 1.,  ..., 1., 0., 0.],\n",
+       "        [0., 0., 0.,  ..., 0., 0., 0.]])"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "reddit_large = torch.load('gad_datasets/large_reddit/large_reddit.pt')\n",
+    "print(len(reddit_large))\n",
+    "reddit_large[1]"
    ]
   },
   {
